Trying to fix the collapsed navbar button which is inactive

--- a/public/css/environment.css
+++ b/public/css/environment.css
@@ -3,7 +3,7 @@ img.bg {
   z-index: -100;
   /* Set rules to fill background */
   min-height: 100%;
-  min-width: 1024px;
+  /*min-width: 1024px;*/
   
   /* Set up proportionate scaling */
   width: 100%;
@@ -117,6 +117,9 @@ vertical-align:middle;*/
   border-color: #39CCCC;
 }
 
+.post-notes-entry {
+  display: none;
+}
 
 
 
